--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dompurify": "^3.1.7",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
