--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.5",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
