--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.1.7",
+    "html-react-parser": "^5.1.17",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
